syntax = "proto3";

option go_package = "proto/user"; 

service AuthService {
    rpc SignUp (UserInfo) returns (Response);
}

message UserInfo {
    string email = 1;
    string password = 2;
    string login = 3;
    string surname = 4;
    string name = 5;
    string birth_day = 6;
}

message Response {
  bool isCreated = 1;
  string errorString = 2;
}